--- a/Semi_Pro.html/Index.html
+++ b/Semi_Pro.html/Index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="home-text">
                 <h4>We are Marañon And Toston</h4>
-                <p>Semi-Final Project</p>
+                <p>We are BSIT Student</p>
             </div>
            
 
