--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="logo">MT</div>
+    <nav>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<html>
-    <head>
-    <title> &bull; Portfolio</title>
-    <link rel="stylesheet" href="Style.css">
-    </head>
-    <body>
-       <header>
-        <a href="#" class="logo">Loustra</a>
-        <nav>
-            <a href="#" class="active">Home</a>
-            <a href="blog.html">Blog</a>
-            <a href="about.html">About</a>
-        </nav>
-       </header>
-      
-        <section class="Home">
-            <div class="home-img">
-                <img src="imagejfsohivu.jpg">
-            </div>
-            <div class="home-text">
-                <h4>We are Marañon And Toston</h4>
-                <p>We are BSIT student</p>
-            </div>
-           
+  <section class="hero">
+    <div class="hero-content">
+      <h1>MT</h1>
+      <h2>Café Shop</h2>
+      <p>If you're feeling empty, drink some coffe.</p>
+      <p>Here in MT Cafe, we serve it freshly hot and cold.</p>
+      <button><a href="menu.html" class="Order-btn">Order Now</a></button>
+    </div>
+  </section>
 
-        </section>
-       </main>
-    </body>
+  <footer class="footer">
+    <p>© 2025 My Portfolio. All rights reserved.</p>
+  </footer>
+</body>
 </html>
